# seqtools2

./: README.md  README.rst  requirements.txt  setup.cfg  setup.py
seqtools2/: basic_fasta_stats.py  chunk_fasta.py  detect_chimeric_alignments.py  fasta_filter_by_len.py  file_helpers.py  filter_fasta_by_length.py  get_fasta_by_id.py  get_fastq_by_id.py  seqtools2  subset_fastq.py
seqtools2/helpers/: file_helpers.py  sequence_helpers.py
seqtools2/tools/: basic_fasta_stats.py  chunk_fasta.py  chunk_fastq.py  fastx_converter.py  format_fasta.py  get_fasta_by_id.py  get_fastq_by_id.py  subset_fastq.py
sequencetools/: __init__.py  __main__.py
sequencetools/helpers/: file_helpers.py  sequence_helpers.py
sequencetools/test_sequence/: test_targets.txt
sequencetools/tools/: __init__.py  basic_fasta_stats.py  chunk_fasta.py  chunk_fastq.py  detect_chimeric_alignments.py  fastx_converter.py  filter_fasta_by_length.py  format_fasta.py  get_fasta_by_id.py  get_fastq_by_id.py  hifi_profiler.py  subset_fastq.py
