[metadata]
name = sequencetools
url = https://github.com/ncgr/seqtools2.git
author = Connor Cameron
author_email = ctc@ncgr.org
maintainer = Connor Cameron
maintainer_email = ctc@ncgr.org
long_description = file:README.rst
description-file =
    README.rst
    CHANGELOG.rst
keywords =
    science
    biology
    bioinformatics
license = BSD 3-Clause
license_file = LICENSE.txt
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: BSD
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = sequencetools
install_requires =
    biopython
    click
    intervaltree
    numpy
    sortedcontainers

[options.package_data]
* =
    *.txt
    *.rst
    *.faa
    *.fa
    *.fasta


